--- a/Making/SolarTrader/SolarTrader.html
+++ b/Making/SolarTrader/SolarTrader.html
@@ -7,10 +7,10 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -22,14 +22,14 @@
 	  <!--<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='ATA.html';">The Bad Music Scene: All The Audio Project</button></th></div>-->
 	</div>
 	
-	<h2 style="text-align:center;"><a href="MakingHome.html">Making</a></h2>
+	<h2 style="text-align:center;"><a href="../home.html">Making</a></h2>
 	<h3 style="text-align:center;">Solar Trader</h3>	
 	
 	<!--<img src="PlasticBeach.png" alt="Plastic Beach - Kazoo Edition Album Cover" style="width:35%;height:auto;"></img>-->
 	
 <p style="text-align:center;">Bootlegging an out-of-print board game from the '90s.<br><br>Scroll to the bottom for links if you'd like to have a digital or physical copy yourself.</p>
 
-<img src="SolarTrader/everything.jpg" title="The board, box and pieces I made for my copy of Solar Trader." alt="The board, box and pieces I made for my copy of Solar Trader."></img>
+<img src="everything.jpg" title="The board, box and pieces I made for my copy of Solar Trader." alt="The board, box and pieces I made for my copy of Solar Trader."></img>
 
 <h4 style="text-align:center;">Introduction</h4>
 <p style="text-align:center;">A friend introduced me to this board game during a get-together, and I rather enjoyed it. I went online to see if I could get a copy, and found nothing of the company and very little of the game, save for some 'sold' eBay listings. With the original copy of the board game soon out of reach with a relative of the friend, I decided to make my own copy... and actually got around to doing it two-ish years later.</p>
@@ -39,7 +39,7 @@
 <h4 style="text-align:center;">The board</h4>
 <p style="text-align:center;">I started by designing the art. I managed to find an <a href="https://boardgamegeek.com/boardgame/7808/solar-trader">entry in a board games wiki site</a> for <i>Solar Trader</i>, which happily contained a few pictures of the board and playing pieces, along with a scan of the rules booklet. Major thanks to wiki users Simon Bullman, Thom Denholm, Nick Townsend, Mark O'Reilly, Colin and Fabio Cattaneo for those. Additionally, some expansions have been made by wiki users, which I might have to try out at some point. Anywaaaaaay...</p>
 
-<img src="SolarTrader/onlineAvailability.png" alt="screenshot of Solar Trader's entry on a board games wiki"></img>
+<img src="onlineAvailability.png" alt="screenshot of Solar Trader's entry on a board games wiki"></img>
 
 <p style="text-align:center;">Using the pictures of the original artwork, I set about re-creating the easy stuff (comprising the board, money and upgrade cards). One picture in particular contained pretty much all of these, albeit in low-resolution and at a slight angle. It is a testament to my ability to overcomplicate things that I immediately started trying to correct for the parallax by warping the image badly, instead of looking for other images of the board from directly above, which I found pretty much the instant I gave up on my previous approach.
 	<br><br>
@@ -48,7 +48,7 @@ At time of writing/making, I don't know how to use any real graphics editing pro
 I started with the board, making heavy use of the freeform tool to trace the outlines of each path a player could take. The intuitive nature of the tool made this fairly quick, although I began to run into a problem here which would persist throughout the project: Keynote is not optimised as a graphic design programme, and thus starts to lag when slides make heavy use of graphical effects. The effect kicks in at a low level when drawing very complex freeform tools, and really makes itself known when lots of high-resolution pictures, transparencies, shadows/glows and shapes are present on screen at once. I'm getting ahead of myself a bit though- at this stage, I was still drawing the basic shapes. Once these were done, I had to draw each individual line separating the paths into squares. I tried the faster option of duplicating and repositioning the previous line, but I found that even when all of the 'snap-to' options were turned off, I still wasn't able to get as precise positioning as when I drew new lines each time. Yet another issue with using presentation software as graphics software.
 </p>
 <div style="text-align: center;"><video width=25% height=auto controls>
-  <source src="SolarTrader/boardProgress.mp4" type="video/mp4">
+  <source src="boardProgress.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video></div>
 
@@ -58,7 +58,7 @@ Your browser does not support the video tag.
 <p style="text-align:center;">As with the board, I had some pretty good pictures of the originals to base my versions off of. The credits were fairly quick, as all I needed was some coloured rectangles, a cartoon picture of the Earth that I reduced down to just the continents, and a sci-fi font (which I already had from a previous design project). I added some flavour on the reverse of the currency, keeping the value and adding in a summation character (∑) as a currency symbol (ie pay the 'sum of' x...), as well as adding in a picture of some alien of appropriate stature; we go from the highest unit of currency having a Xenomorph to the lowest unit, which has to put up with a slugtopus.</p>
 
 <div style="text-align: center;"><video width=25% height=auto controls>
-  <source src="SolarTrader/ETLupgrade.mp4" type="video/mp4">
+  <source src="ETLupgrade.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video></div>
 
@@ -67,12 +67,12 @@ Your browser does not support the video tag.
 <h4 style="text-align:center;">Commodities and rockets</h4>
 <p style="text-align:center;">My initial version of the game was meant for <a href="https://www.tabletopsimulator.com/">TableTop Simulator</a>, so I used digital meeple for the ships, and simple circular tokens for the commodities, to which I added icons for each commodity. As mentioned in the above section on the board, many of these symbols were built into Keynote, with the exception of fuel, gold, silver, tobacco and solar energy crystals. To these I added a background of some nebula (I can't remember which now), and border colours based on the different commodity types.</p>
 
-<img src="SolarTrader/tokens.png" alt="the different types of commodity token in Solar Trader"></img>
+<img src="tokens.png" alt="the different types of commodity token in Solar Trader"></img>
 
 <h4 style="text-align:center;">TableTop Simulator</h4>
 <p style="text-align:center;">Getting the designed assets out of Keynote and into TableTop Simulator could be as easy as taking screenshots and using them as textures. However, this is extremely lossy and felt a bit wrong to boot; I wasn't quite willing to throw away any details after spending so long labouring over them! The janky solution I found was via a slightly unhinged forum post which I sadly haven't been able to find again, which suggested exporting the Keynote file as a PDF, which can then be converted into a series of TIFF images at extremely high resolution, and then downsized to workable resolutions and filesizes. This does the job perfectly, and after some tutorial following and elbow grease, I had a playable version of Solar Trader in TableTop Simulator:</p>
 
-<img src="SolarTrader/tabletopSimulator.jpg" alt="the Solar Trader bootleg in TableTop Simulator"></img>
+<img src="tabletopSimulator.jpg" alt="the Solar Trader bootleg in TableTop Simulator"></img>
 
 <p style="text-align:center;">In addition to the assets I designed earlier, I also created some table art, and a pano picture for the room featuring the M-87 black hole. I haven't finished this version of the bootleg, but I plan to add some space-themed ambience and maybe music, and then release it on the Steam Workshop. I'll pop a link here if I ever do that. I conducted some play-testing of this version with friends, and while it was fun and the graphics I'd made were judged to be decent, the limitations of playing a tactile board game via computers slowed down the game and took the energy out. This is a death knell for a playing session, especially when the game is unfamiliar to some of the players. The solution, of course, was to make a physical version.</p>
 
@@ -89,12 +89,12 @@ Your browser does not support the video tag.
 	<br><br>
 The first step was to colour the outside of the buttons to match the borders of the token artwork I'd made earlier for the TableTop Simulator version, which was done simply with some Sharpies. This took a while, so I began printing out the currency sheets concurrently. After a bunch of cutting and drawing, I was left with finished currency, and a bunch of half-done tokens.</p>
 
-<img src="SolarTrader/day1.jpg" alt="making tokens and currency"></img>
+<img src="day1.jpg" alt="making tokens and currency"></img>
 
 <p style="text-align:center;">After this, I printed out a sheet of commodity art, which I scaled down to button size and filled a sheet of A4 with. I made sure to make more tokens than necessary so that I don't have to start the making process all over again as soon as a piece or two are lost. Once the art was printed out onto some A4 card, I laminated it with sticky back plastic (harder than I remembered it being), and began cutting them out and applying them to the buttons with the help of a rather old Pritt stick. This took some time, but yielded some nice-looking results. The only problem with these tokens, functionally, is that they are still bigger than will fit nicely on the board (specifically in spaceship holds), but this shouldn't be too big an issue because they stack quite well. The finished tokens were left to dry overnight, and in the morning were pretty solid. It's still relatively early doors as I write this, but not a single token has yet suffered from peeling of the card from the button, or sticky back plastic from the card, even through a minor spillage onto a few pieces. Not bad for school supplies.</p>
 
 <div style="text-align: center;"><video width=25% height=auto controls>
-  <source src="SolarTrader/makingTokens.mp4" type="video/mp4">
+  <source src="makingTokens.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video></div>
 
@@ -103,19 +103,19 @@ Your browser does not support the video tag.
 <h4 style="text-align:center;">Upgrade and Trading Cards</h4>
 <p style="text-align:center;">These were all made in a relatively similar way to one another. To avoid the many annoyances that come with aligning double-sided printing, and to add extra thickness to the cards, I printed both sides of the designs onto the same side of A4 card so that I could cut them out, laminate them, fold them over and glue them and then have finished cards. This was fairly easy to do, apart from applying the sticky back plastic, which ruined a set of printouts due to bubbles and damage to the card after minor repositioning. Once folded and glued, they were left to dry under a heavy book for some hours, which helped keep them flat. In this time I also printed out the rulebook, which was pretty easy overall but did have me scratching my head for a few minutes while getting all the pages in the right order for printing, compared to reading in the PDF.</p>
 
-<img src="SolarTrader/upgradeCards.jpg" alt="making upgrade cards"></img>
+<img src="upgradeCards.jpg" alt="making upgrade cards"></img>
 
 <h4 style="text-align:center;">The Board</h4>
 <p style="text-align:center;">I exported this at a ludicrous resolution, and took it to be printed at 58x58cm, giving me a few centimetres of leeway on the backing board that I planned to mount the printout to. The printing place got it done on the same day, and so I brought it home and promptly got too nervous to do any further work on it for the rest of the day. The print looked perfect, I cut the backing board to exactly the right size, and any mistake now would likely mean buying a new printout, or a new backing board- neither were the cheapest things in the world. Also, I had a problem in that the board needed to fold or otherwise come apart, or it'd be really difficult to store. I decided against folding it after realising that the photo paper would become the hinges, and I highly doubted that it would hold up nicely for any length of time. After some umming and ahhing, I cut the backing board into equal quadrants, and used those to cut the printout to the exact size. This was rather nervewracking, but came out pretty nicely, with only some slight problem edges which could more or less be ignored. The printout quadrants were mounted onto their respective backing board quadrants with quite a lot of Pritt stick glue, and after drying, looked and felt great. At some point I should probably put sticky back plastic or something similar over the photo paper to protect it from scratches, but that's going to have to wait, as I feel sticky back plastic could be too shiny, and make the board less ledgible (see <a href="https://www.instagram.com/p/Ca1-aiZg_2l/?utm_source=ig_web_copy_link">the problems I had with the front panel of the JD-Xi synth</a>, which I'll write a page about at some point). Is there such a thing as matte sticky back plastic?</p>
 
-<img src="SolarTrader/boardMaking.jpg" alt="the board in play before cutting, and being cut into pieces."></img>
+<img src="boardMaking.jpg" alt="the board in play before cutting, and being cut into pieces."></img>
 
 <p style="text-align:center;">Once this was all done, and with the addition of a space-themed d10 and d20, I had a fully playable, physical set of Solar Trader. It stood up very nicely to some playtesting, and was enjoyed by my whole family over the course of two evenings (I think we could have played through in one, but it was Christmas at the time and life was busy). The only problem was that there was nowhere to store the game.</p>
 
 <h4 style="text-align:center;">The Box</h4>
 <p style="text-align:center;">After finding that most existing boxes were too small by a few centimetres, I set about making my own out of some cardboard packaging left over from Christmas. The box itself was pretty easy; size-match to the largest components (the board quadrants), give a little leeway, and make a net. The harder part was where to put the money, cards, tokens, etc. I wanted to make something like you get in normal board games, with a vacuum-formed insert containing little trays for everything to sit neatly inside. Having no access to vacuum forming technology, I had to get creative. I was planning on making smaller card trays from cereal boxes or something, but fortune smiled on me in the form of an empty beer advent calendar (don't ask), which had cardboard packaging inserts to hold the cans in place. Removed from the rest of the calendar, these worked perfectly; I put the different bits and bobs from the game wherever they'd fit, and then cut that section out. After that, I just had to create a 'surface' from another bit of leftover advent calender, and I had a fully functional insert to neatly store everything in. After a lot of packaging tape to keep everything secure and protected from a little wear, and a stenciled logo, the box looked pretty good. Not quite as swish as the original packaging, but it certainly looks like a package that a Solar Trader might have stashed in the hold of their craft.</p>
 
-<img src="SolarTrader/boxMaking.jpg" alt="Box making, as described above"></img>
+<img src="boxMaking.jpg" alt="Box making, as described above"></img>
 
 <p style="text-align:center;">Done!</p>
 
@@ -123,7 +123,7 @@ Your browser does not support the video tag.
 <p style="text-align:center;">The TableTop Simulator version can be accessed on the Steam Workshop <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2908377316">here</a>, and the print-ready files if you want to make a physical copy are <a href="https://drive.google.com/drive/folders/1l0WsxB2lqhLrQAr2mJNWshHSWABBa9bN?usp=share_link">here</a>. I had some doubts about the ethics of putting this here until I realised that with the original company long gone and the game out of print, there's not only no-one losing money on this currently, but also so little demand for the game that it's kind of a moot point.</p>
 
 <hr>
-Last updated 2022-12-28
+Last updated 2023-01-06
 </body>
 </html>
 
