--- a/Making/wordleSolver/wordleSolver.html
+++ b/Making/wordleSolver/wordleSolver.html
@@ -7,10 +7,10 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -22,7 +22,7 @@
 	  <!--<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='ATA.html';">The Bad Music Scene: All The Audio Project</button></th></div>-->
 	</div>
 	
-	<h2 style="text-align:center;"><a href="MakingHome.html">Making</a></h2>
+	<h2 style="text-align:center;"><a href="../home.html">Making</a></h2>
 	<h3 style="text-align:center;">Simple Wordle Solver</h3>	
 
 	
@@ -41,7 +41,7 @@ words_alpha.txt contains words of all lengths, so my programme's first step when
 <h4 style="text-align:center;">Defining Functions</h4>
 <p style="text-align:center;">Wordle pretty much tells us what we need to do to our list of words, given some guess. If a letter's grey, it's not in the word- all words containing that letter can be removed from our word list. If a letter's green, it's in the word at that exact position- all words which <i>don't</i> contain that letter at that position can be removed. If a letter's orange, it's in the word, but not at that position- we can remove all words which don't contain that letter, and all words which contain that letter in that position. I implemented these rules, plus - because the word list we're working from is more extensive than Wordle's - a 'nope' function, which removes specific words if they're entered as guesses and Wordle doesn't recognise them.</p>
 
-<img src="wordleSolver/fewer.png" style="width:200px;height:auto;" title="An early version of the programme with only the ability to eliminate letters from subsequent guesses, with some humorous results." alt="An early version of the programme with only the ability to eliminate letters from subsequent guesses, with some humorous results."></img>
+<img src="fewer.png" style="width:200px;height:auto;" title="An early version of the programme with only the ability to eliminate letters from subsequent guesses, with some humorous results." alt="An early version of the programme with only the ability to eliminate letters from subsequent guesses, with some humorous results."></img>
 
 <h4 style="text-align:center;">Interface</h4>
 <p style="text-align:center;">Simple CLI, although this one might be fun to do as a GUI at some point. Running the programme starts a while loop which spits out a guess, and the number of words left to choose from. Simply type the programme's guess into Wordle, observe the pretty colours, and feed them back into the programme by entering 'g' for green, 'o' for orange, 'e' for grey (that is, for 'eliminate') or 'nope' if Wordle doesn't recognise the word. As an example, if the programme guessed 'house' and Wordle returned <span style="background-color:lightgreen">h</span><span style="background-color:yellow">o</span><span style="background-color:grey">u</span><span style="background-color:grey">s</span><span style="background-color:lightgreen">e</span>, you'd then type 'goeeg' into the programme, press enter, and get a new guess. This is a little clunky, but does the job. A GUI could have a lookalike window showing the programme's guess, and the colours of each box could be settable via repeated clicking, with a 'guess again' button to the side once the data had been entered.</p>
@@ -50,7 +50,7 @@ words_alpha.txt contains words of all lengths, so my programme's first step when
 <p style="text-align:center;">I played twenty five games of Wordle Unlimited to test out the solver:<br><br><i>Warning headphone users: weird sped-up keyboard clicking sounds abound</i></p>
 
 <div style="text-align: center;"><video width=25% height=auto controls>
-  <source src="wordleSolver/demo.mp4" type="video/mp4">
+  <source src="demo.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video></div>
 
@@ -59,10 +59,10 @@ Your browser does not support the video tag.
 A further problem is the number of non-recognised guesses my solver gives. Obviously it would be silly to go through the word list text file and manually delete the obscure words- instead, the 'nope' command could remove the specified word not only from the runtime list, but also the text file itself... I'll save that for whenever I decide to add a GUI.</p>
 
 <h4 style="text-align:center;">Where to find</h4>
-<p style="text-align:center;">The latest version can be downloaded <a href="wordleSolver/SimpleWordleSolver.zip" download>here</a>.</p>
+<p style="text-align:center;">The latest version can be downloaded <a href="SimpleWordleSolver.zip" download>here</a>.</p>
 
 <hr>
-Last updated 2023-01-03
+Last updated 2023-01-06
 </body>
 </html>
 
