--- a/Music/CommonwealthApp/CommonwealthApp.html
+++ b/Music/CommonwealthApp/CommonwealthApp.html
@@ -7,10 +7,10 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -22,7 +22,7 @@
 	  <!--<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='ATA.html';">The Bad Music Scene: All The Audio Project</button></th></div>-->
 	</div>
 	
-	<h2 style="text-align:center;"><a href="MusicHome.html">Music</a></h2>
+	<h2 style="text-align:center;"><a href="../home.html">Music</a></h2>
 	<h3 style="text-align:center;">Commonwealth App Song</h3>	
 	
 	<!--<img src="PlasticBeach.png" alt="Plastic Beach - Kazoo Edition Album Cover" style="width:35%;height:auto;"></img>-->
@@ -35,19 +35,19 @@
 
 <p style="text-align:center;">One of my second year CS modules was a group project where we had to design an app, and one of the tasks given to us was to create a video demonstration of the app in action. I volunteered to take care of it, and managed to persuade my team to allow me some creative liberty (thanks, Group 16 :) ).</p>
 
-<img src="CommonwealthApp/brief.png" alt="Provide a 3 minute video-demo of your system to showcase your system to non-experts. Use MP4 format. Be creative!"></img>
+<img src="brief.png" alt="Provide a 3 minute video-demo of your system to showcase your system to non-experts. Use MP4 format. Be creative!"></img>
 
 <h4 style="text-align:center;">Writing and recording</h4>
 
 <p style="text-align:center;">After struggling through the boring majority of the project, our team were nearing the finish line, with just a few tasks left. In meetings and via Discord, we discussed who was to do what. I approached the rest of the team with the idea:</p>
 
-<img src="CommonwealthApp/chat1.png" alt="Me: 'How would people feel if I were to make the demo video a song?' Team member: 'As long as it secures the marks... think it's a funny idea though'."></img>
+<img src="chat1.png" alt="Me: 'How would people feel if I were to make the demo video a song?' Team member: 'As long as it secures the marks... think it's a funny idea though'."></img>
 
 <p style="text-align:center;">And we're off!
 	<br><br>
 I tried out some ideas for about a week and a half without any success, and feared that my long-lived writer's block was going to foil my efforts and waste the team's time. After a period of frustrated agonising, I almost gave up... and then almost the entire song fell out of me at once. I spent the rest of the day tidying it up as best as I could, then slept on it. The next morning, I finished the writing process and recorded a demo, letting my team know about my progress as I went:</p>
 
-<img src="CommonwealthApp/chat2.png" alt="Me: 'I have made a song.' (the lyrics and a demo are attached to the message)"></img>
+<img src="chat2.png" alt="Me: 'I have made a song.' (the lyrics and a demo are attached to the message)"></img>
 
 <p style="text-align:center;">Positive feedback from my team spurred me on, and after devising and recording harmonies and a proper main vocal, I had the song. The process really was freakishly quick, and the result sounded nicely distinct from my earlier, slower and harmonically denser songs. This was a purposeful difference, as I was keen to create something which would grab the attention. New wave sounds were my main inspiration, specifically Talking Heads, Blondie, Oingo Boingo and DEVO.
 	<br><br>
@@ -57,20 +57,20 @@ The final version of the song isn't my best work; I was juggling two other modul
 
 <p style="text-align:center;">Unusually for me, I put a lot of effort into the video. In order to fit with the brief, the app needed to be shown in use. I wanted to include myself singing a bit to up the comedy value, and decided to make use of these creative constraints to try out a technique which Bo Burnham used to great effect in his special <i>Inside</i> (coincidentally, the source of my writer's block for a while- what was the use in writing anything when he'd already said everything so well?): performing with projections.
 	<br><br>
-Happily, I had the vast majority of the graphics already made; this demo video was part 2 of section E of the project, with part 1 also my responsibility. E1 was to make a prototype of the app, which I did in Scratch 3 due to how easy it was to show graphics and add simple logic (more on that <a href="../placeholder.html">here</a>). For this, I created graphics in Keynote (Apple's answer to PowerPoint) and used them as Sprites and Costumes in Scratch. I still had the original Keynote file though, with all elements in place and just crying out to be used again.</p>
+Happily, I had the vast majority of the graphics already made; this demo video was part 2 of section E of the project, with part 1 also my responsibility. E1 was to make a prototype of the app, which I did in Scratch 3 due to how easy it was to show graphics and add simple logic (more on that <a href="../../placeholder.html">here</a>). For this, I created graphics in Keynote (Apple's answer to PowerPoint) and used them as Sprites and Costumes in Scratch. I still had the original Keynote file though, with all elements in place and just crying out to be used again.</p>
 
-<img src="CommonwealthApp/appGraphics.png" alt="All of the graphics used in the Scratch programme."></img>
+<img src="appGraphics.png" alt="All of the graphics used in the Scratch programme."></img>
 
 <p style="text-align:center;">Use them I did. I converted the presentation from silly graphics programme to silly animation programme, making liberal use of motion paths and the 'magic move' slide transition. The spotlight in the video is just a circle drawn on the screen with the appropriate size and colour. After experiencing difficulties 'exporting' slideshow animations via screen recording (such as lag and reduced resolution), I found that Keynote has the ability to properly export slideshows as .mp4s. This way, I improved both the framerate and the resolution, and eliminated any stutters in the video. The downside is that there's no user cueing- the video Keynote spat out went from one transition/animation to the next with no pauses. Luckily, it was fairly easy to cut this video to the appropriate timings with the song. Once that was done, I exported the finished backing video, and was ready to begin filming.</p>
 
-<img src="CommonwealthApp/background.png" alt="A still from the backing video, featuring the app's homepage."></img>
+<img src="background.png" alt="A still from the backing video, featuring the app's homepage."></img>
 
 <p style="text-align:center;">This is where I'd put videos of the recording process... if I could find them. Unfortunately either a backup's gone awry, or I just deleted the videos when I no longer needed them. I'm assuming the latter, because storage is always a premium for me. Maybe they'll turn up later.</p>
 
 <p style="text-align:center;">
 The actual recording process was pretty simple. I did the whole song in sections, for the costume changes. Part one was casual, normal me- hair messily tied back, t-shirt and tracksuit trousers. Part two was crazy computer science me- hair puffed out a bit, computer science society t-shirt, sunglasses and over-acting. Part three was lecturer me- suited up, hair brushed and tied back, holding a pointy stick (which was the hanging rod for my clothes- not pictured in the video is all of my clothes all over the floor, and the room in general carnage as enough space was made on that wall to film it properly). I recorded each section several times in one video, and then changed costume and rehearsed the next part for a bit before filming. Including the time between takes, I had nearly an hour of footage to look through for good takes. The entire filming process took place in one day, and straight after I finished I had to get ready for a <a href="MelancholyChristmas.html">recording session taking place that same day</a>. I was <i>knackered</i> that evening.</p>
 
-<img src="CommonwealthApp/teaser.png" alt="I dropped some teasers of the video to my teammates. I'm not sure if they were amazed or exasperated."></img>
+<img src="teaser.png" alt="I dropped some teasers of the video to my teammates. I'm not sure if they were amazed or exasperated."></img>
 
 <p style="text-align:center;">The editing process was pretty easy really- once I'd decided which take of each section I was using, I made sure they were in sync with the music (only difficult for one small bit when part 2 transitions to part 3), and added some subtle slow zooms to make the video seem more dynamic. Occasional fast zoom-outs were quite effective for revealing the app logo in the chorus, and these were only possible because the camera spent much of the verses creeping in. Various flubs meant that even the best takes weren't perfect, so some cover up work was done, for example with the snapshots of UML diagrams which cover the screen at several points in the first chorus. The loading icon zoom out into the second verse accomplishes the same, and the bulding synth sound and zoom go together so well that it looks planned. It's like that lateral thinking card: 'honour thy mistake as hidden intention'.</p>
 
@@ -79,12 +79,12 @@ The actual recording process was pretty simple. I did the whole song in sections
 
 <p style="text-align:center;">Here are some of the reactions my silly video garnered from my classmates:</p>
 
-<img src="CommonwealthApp/r1.png" alt="Reactions from classmates"></img>
-<img src="CommonwealthApp/r2.png" alt="Reactions from classmates"></img>
-<img src="CommonwealthApp/r3.png" alt="Reactions from classmates"></img>
-<img src="CommonwealthApp/r4.png" alt="Reactions from classmates"></img>
-<img src="CommonwealthApp/r5.png" alt="Reactions from classmates"></img>
-<img src="CommonwealthApp/r6.png" alt="Reactions from classmates"></img>
+<img src="r1.png" alt="Reactions from classmates"></img>
+<img src="r2.png" alt="Reactions from classmates"></img>
+<img src="r3.png" alt="Reactions from classmates"></img>
+<img src="r4.png" alt="Reactions from classmates"></img>
+<img src="r5.png" alt="Reactions from classmates"></img>
+<img src="r6.png" alt="Reactions from classmates"></img>
 
 <p style="text-align:center;">As per the final line of the song, we did indeed get a first for the project.</p>
 
@@ -97,7 +97,7 @@ I may have to pinch some of these chords for a 'serious' song at some point. The
 <p style="text-align:center;">The video's available on YouTube, and the song can be downloaded from Bandcamp.</p>
 
 <hr>
-Last updated 2022-10-18
+Last updated 2023-01-06
 </body>
 </html>
 
