--- a/Music/MelancholyChristmas/MelancholyChristmas.html
+++ b/Music/MelancholyChristmas/MelancholyChristmas.html
@@ -7,10 +7,10 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -22,7 +22,7 @@
 	  <!--<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='ATA.html';">The Bad Music Scene: All The Audio Project</button></th></div>-->
 	</div>
 	
-	<h2 style="text-align:center;"><a href="MusicHome.html">Music</a></h2>
+	<h2 style="text-align:center;"><a href="../home.html">Music</a></h2>
 	<h3 style="text-align:center;">Melancholy Christmas - Mutual Frogs Single</h3>	
 	
 	<!--<img src="PlasticBeach.png" alt="Plastic Beach - Kazoo Edition Album Cover" style="width:35%;height:auto;"></img>-->
@@ -39,12 +39,12 @@
 
 <p style="text-align:center;">I saw the Mutual Frogs for the first time in early November of 2021, at an open mic hosted by the university's Climate Justice Movement society as a sort of rally for a march that was happening that weekend, to try and push global leaders to actually do something at COP26. As soon as I saw the band play, I wanted to be involved in recording their music- their songs were great, as was their playing. I chatted with Jess about it after their performance, and she told me that the band were thinking about recording their material at some point, so it might happen. We discussed it in passing during other conversations we had while getting UoB's Live and Unsigned Music Society going (we were both on the interim comittee), and it seemed like the band wanted something out before the end of the year.</p>
 
-<img src="MelancholyChristmas/COPcabaret.png" alt="A dodgy photo collage of the Frogs and myself at the COP 26 Cabaret, put on by the UoB Climate Justice Movement."></img>
+<img src="COPcabaret.png" alt="A dodgy photo collage of the Frogs and myself at the COP 26 Cabaret, put on by the UoB Climate Justice Movement."></img>
 
 <p style="text-align:center;">My involvement in the process was about two weeks, from the 27th of November - when Jess messaged me regarding recording the song -  to the 13th of December, when I sent the final mix to the band. After enthusiastically accepting the invitation to produce a song for the group, I was sent a demo recording and a chord/lyric document. I started hashing out an arrangement, and presented it to the band some days later at one of their rehearsals. We exchanged ideas, and the band practiced and modified some of the harmonies I'd arranged until everyone was happy with it. We organised a time to record, and I got on my way home while they carried on jamming out tunes.</p>
 
 <div style="text-align: center;"><audio controls>
-  <source src="MelancholyChristmas/ArrangementV1.mp3" type="audio/mpeg">
+  <source src="ArrangementV1.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio></div>
 
@@ -56,12 +56,12 @@ I started mixing the instruments that evening and the next day, reviewing my pro
 </p>
 
 <div style="text-align: center;"><video width=25% height=auto controls>
-  <source src="MelancholyChristmas/feedback.mp4" type="video/mp4">
+  <source src="feedback.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video></div>
 
 <!--<div style="text-align: center;"><audio controls>
-  <source src="MelancholyChristmas/ChristmasFeedback.mp3" type="audio/mpeg">
+  <source src="ChristmasFeedback.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio></div>-->
 
@@ -69,12 +69,12 @@ Your browser does not support the audio element.
 Some fun things went in then- the rhythm guitar was doubled with alternate takes to create a second track, which added to the sound nicely. The main rhythm guitar take was recorded onto a tape dictation machine I picked up in Brighton during the summer, and the resulting poor quality audio was added back in as an additional track. This, when treated in-DAW, added a nice warm lo-fi element to the sound. Additional ambience was provided by audio lifted from a home video of my parents and their friends laughing and chatting while playing Articulate. This too was EQ'd, reverbed and panned to created muffled speech, as if you were resting in the lounge while listening to the others chatting in the dining room- very cosy. The lead guitar part was assembled by me out of four different takes, each of which contained neat noodling. I tried to pick out the best complete phrases from each, but other melodies composed of multiple interpolated takes seemed to jump out, some more interesting than anything played in one go. Jess was cool with this, and mostly liked how they came out - some bits were changed or reverted according to what she thought worked. All of this was done over the weekend.
 </p>
 
-<img src="MelancholyChristmas/leadGuiat.png" title="The comped lead guitar for Melancholy Christmas." alt="The comped lead guitar for Melancholy Christmas."></img>
+<img src="leadGuiat.png" title="The comped lead guitar for Melancholy Christmas." alt="The comped lead guitar for Melancholy Christmas."></img>
 
 <p style="text-align:center;">
 I sent versions of the mix to my family because my ears were tired, and according to feeback from them and the band, made some further light changes. After a day of back and forth with various parties, we arrived at a final mix that everyone was happy with. Job well done- enjoyable the whole way through, a great experience learning to collaborate with other musicians, and hopefully an opened door to more similar projects in the future.</p>
 
-	<img src="MelancholyChristmas/frogPics.png" alt="various pictures from the recording process"></img>
+	<img src="frogPics.png" alt="various pictures from the recording process"></img>
 	<p>These aren't in chronological order- that would be too easy.</p>
 	<ol>
 		<li>Recording the guide track- just vocals and rhythm guitar by songwriter Meia. The mic used was my Shure SV100- Nick the bassist later brought over his SM58 and pop filter, which much improved the quality of the final vocals.</li>
@@ -85,7 +85,7 @@ I sent versions of the mix to my family because my ears were tired, and accordin
 	</ol>
 
 <div style="text-align: center;"><video width=50% height=auto controls>
-  <source src="MelancholyChristmas/tapeTeaser.mp4" type="video/mp4">
+  <source src="tapeTeaser.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video></div>
 
@@ -95,11 +95,10 @@ Your browser does not support the video tag.
 <h4 style="text-align:center;">Where to find</h4>
 <p style="text-align:center;">Melancholy Christmas is available on YouTube, Bandcamp, SoundCloud, and streaming services. The Frogs can be found in those places, and on Instagram and Facebook.
 	<br><br>
-Here's their linktree:
-<a href="https://linktr.ee/MutualFrogs">https://linktr.ee/MutualFrogs</a></p>
+Here's their <a href="https://linktr.ee/MutualFrogs">linktree</a></p>
 
 <hr>
-Last updated 2022-06-06
+Last updated 2023-01-06
 </body>
 </html>
 
