--- a/Music/MorningChildhood/MorningChildhood.html
+++ b/Music/MorningChildhood/MorningChildhood.html
@@ -7,21 +7,22 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
 	  <div><th><button class="button button" title="I'm mainly here" type="button" onclick="window.location.href='https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber';">YouTube</button></th></div>
 	  <div><th><button class="button button" title="Where my original music lives" type="button" onclick="window.location.href='https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA';">Spotify</button></th></div>
+	  	  <div><th><button class="button button" title="Still learning this" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/releases';">Bandcamp</button></th></div>
 	  <div><th><button class="button button" title="Stuff I can't or haven't uploaded to Spotify" type="button" onclick="window.location.href='https://soundcloud.com/penguinator-626121505';">SoundCloud</button></th></div>
 	  <div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://www.instagram.com/penguinatron/';">Instagram</button></th></div>
 	  <!--<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='ATA.html';">The Bad Music Scene: All The Audio Project</button></th></div>-->
 	</div>
 	
-	<h2 style="text-align:center;"><a href="MusicHome.html">Music</a></h2>
+	<h2 style="text-align:center;"><a href="../home.html">Music</a></h2>
 	<h3 style="text-align:center;">Morning Childhood</h3>	
 	
 	<!--<img src="PlasticBeach.png" alt="Plastic Beach - Kazoo Edition Album Cover" style="width:35%;height:auto;"></img>-->
@@ -38,13 +39,13 @@
 
 <p style="text-align:center;">Writing took place chiefly in two places: the small recording booths at sixth form, or the walk between there and home. I'd set looped backing parts going in Logic Pro, and jam over the top of them for hours. Then I'd hum the best melodies and chord sequences to myself on the walk, and start putting words in based on how I was feeling. A little over half the album was written this way, with <i>Stars (Oh Cosmos)</i> having started life earlier as a very short America 2018 demo, and some other songs (<i>Leaving Home</i>, <i>On The Aftermath</i>) coming out of the blue almost all at once.</p>
 
-<img src="MorningChildhood/originalStars.png" title="The original GarageBand project file for Stars (Oh Cosmos)"></img>
+<img src="originalStars.png" title="The original GarageBand project file for Stars (Oh Cosmos)"></img>
 
 <p style="text-align:center;">Some of the songs went in different directions than I'd originally planned. I'd abandoned <i>Incoming</i>, <i>Hello World</i> and <i>Stars (Oh Cosmos)</i> because I felt they weren't heading anywhere interesting. You can hear this quite clearly in the final songs; <i>Stars</i> alternates only between G and Cm until the first chorus, which only finally came to me two years after the opening section. <i>Hello World</i> similarly keeps mostly to F#m until the after the chorus section, where it moves to a more interesting chord sequence and some lovely harmonies. <i>Incoming</i> is different; I wanted it to stay in the same melodic space, but gradually build up to a massive sound at the end, mirroring the scale of the protests it described. I couldn't get the build I wanted just with my instruments and vocals, so I added layers of audio from the 2019 Extinction Rebellion protests in London. The 'climate justice now' recording at the very end is one I took personally.</p>
 
 <p style="text-align:center;">Recording was done firstly in the recording booths at sixth form. All instruments were MIDI at this stage, apart from my vocals, which were recorded quickly and without thought for quality, just as long as they were good enough to get the idea down before I forgot it. Lots of the arrangement was instinctive, based on the sounds in my head but without any formal planning. Piano sounds would often go on first because I was comfortable on that instrument. Then drums and bass, to make it sound like a band was playing. The original piano was often replaced with other synths or ePiano sounds after some time although the basic part often remained mostly intact. A guide vocal would be recorded to serve as a scaffold for the harmonies that would follow, and then I'd try to leave the song alone for a little bit, so that I didn't get tired of it. Occasionally on coming back to a song, I'd change some chords, words or structural elements, most dramatically with the examples I mentioned earlier.</p>
 
-<img src="MorningChildhood/recordingBooth.jpg" title="Farnborough Sixth Form recording booth"></img>
+<img src="recordingBooth.jpg" title="Farnborough Sixth Form recording booth"></img>
 
 <p style="text-align:center;">Once the basic tracks were recorded, I set about improving the quality of the sound via refinement of the parts, re-recording the vocals, and getting some help from other musicians. I asked my Music Performance classmate Matthew Hilling for help with rhythm guitar on a few tracks, which was added pretty deep in the mix to create variety in the textures. His contributions are most audible in <i>Incoming</i>. My brother Stanley added guitar to every other song which features the instrument (<i>Hello World</i>, <i>Your Magic Has Gone Away</i> and <i>On The Aftermath</i>). These guitar parts were mostly played as written by me, but the solos at the end of <i>Hello World</i> are all his own. The songs <i>Stars (Oh Cosmos)</i> and <i>(They Leave A Mark) Wherever You Go</i> feature wonderful cello playing from <a href="https://www.reddit.com/user/cheemio">Dustin Dicely</a>, who I connected with over the subreddit <a href="https://www.reddit.com/r/TheRedditSymphony/">r/TheRedditSymphony</a> (well worth checking out). The latter track also features <a href="https://www.reddit.com/user/crojohnson">u/crojohnson</a> on the violin. Some of the string parts are supplemented with a MIDI pad voice. The only other people to credit are the staff of the music department at Farnborough College 6th Form- specifically my Music Performance BTEC teacher Caroline Hordley (who gave me a shedload of useful feedback while I was developing the tracks), and Maisie Richards, who did some mixing on <i>Hello World</i> and gave me some advice which I didn't fully understand or apply at the time.</p>
 
@@ -56,20 +57,20 @@
 
 <p style="text-align:center;">I created 'cover art' for each song. I didn't expect them to need it for an physical packaging, but they were good for thumbnails. The laziest of the videos simply featured the cover art, with some panning and minor video effects. My favourite cover art has to be the image for <i>Your Magic Has Gone Away</i>- incorporating the sun's rainbow into a drawing feels like something to expand upon at some point. The higher-effort videos featured some actual planning- <i>Incoming</i> showed pictures of XR protests (all taken from their newsletters) gradually becoming more sepia toned, as if the life was being sucked out of them. <i>Wherever You Go</i> shows a tea candle burning, for obvious reasons. <i>IHICFMC</i> has the screen gradually fill with numbers, until the very end of the song when the final digit is printed (this was a screen recording of IDLE printing a random digit sans newline on a while True loop).</p>
 
-<img src="MorningChildhood/leavingHomeVideo.png" title="The drawings and Keynote animations for Leaving Home's video"></img>
+<img src="leavingHomeVideo.png" title="The drawings and Keynote animations for Leaving Home's video"></img>
 
 <p style="text-align:center;"><i>Stars</i> had a whole set made for it (out of a cardboard box on my bedroom floor), giving us the point of view of some remote craft monitoring the Earth over the years. The blinking lights in that video were controlled by a Python script on a Raspberry Pi. The small screen was my phone, the large screen was hooked up to my laptop, and the MIDI keyboard is the one I used to record quite a bit of the album. <i>Leaving Home</i> has the most elaborate video, with each scene drawn on paper, scanned in, and animated in Keynote (Apple's PowerPoint). I hadn't learnt to export Keynote slides directly as video files at that point, so it's a screen recording (causing the limited resolution and dropped frames).
 	<br><br>
 <i>Hello World</i> was going to have a full video, as the 'single' from the album. The plan was to flash between various examples of people trying and failing to attain fame online, with some of the people featured lip-syncing to the song. Unfortunately, I couldn't get enough people to play the wannabe influencers in the limited time I had before I wanted to release the album (2020-09-01), so I replaced it with the basic video it has. Oh well...</p>
 
-<img src="MorningChildhood/packaging.png" title="Morning Childhood album jewel case packaging"></img>
+<img src="packaging.png" title="Morning Childhood album jewel case packaging"></img>
 
 <h4 style="text-align:center;">Miscellany</h4>
 <p style="text-align:center;">I used CDBaby to release the album. It's the first thing I put on streaming services, if I remember correctly, and it was an interesting path to navigate for the first time without guidance (other than YouTube videos of dubious credibility). Either way, it's out there now.</p>
 <p style="text-align:center;">This project was the first time I tried recording the piano with a mic on either side, recording simultaneously. I'd previously done one mic at a time over two different takes with pretty good results, but I wanted to do it properly for the album. Luckily, my sixth form's music department had upgraded it's recording equipment fairly recently, and they were selling MIDI controllers and interfaces at student-friendly prices. I picked up one of each, which both served me well (and occasionally still do) through several projects. The sound I got from recording the piano like this was pretty cool, especially when hard-panning the mics. With some EQing and compression, I'd shut my eyes and feel like I was inside the piano as it was playing- very exciting.<br>
 	<br>
 	I took this a step further for <i>Hello World</i>, and managed to get some time in my sixth form's recording studio, in which I re-recorded the song's piano part using their in-tune piano and much better mics. I felt totally unworthy of the lovely equipment while hammering out the basic chords of my rock song, but it sounded pretty good.</p>
-<img src="MorningChildhood/farnPiano.jpg" title="Farnborough Sixth Form's lovely recording piano"></img>
+<img src="farnPiano.jpg" title="Farnborough Sixth Form's lovely recording piano"></img>
 <p style="text-align:center;">My ukulele playing on this is pretty horrible, as I was fairly inexperienced with the instrument at the time. In some cases, I'd play every other chord in one take, using the gaps to switch chord because I wasn't fast enough to do it in real time. Then, I'd do another take to get all the chords I missed. I also occasionally pitched shifted the uke down an octave and mixed it to about 30% wet, with the intention of getting a deeper, more guitar-like sound. This didn't work as intended, but did sound kind of interesting.</p>
 
 <h4 style="text-align:center;">Retrospective Opinion</h4>
@@ -84,7 +85,7 @@ Mine, on the other hand, is like Bambi's first shaky steps; the songs haven't ha
 
 
 <hr>
-Last updated 2022-12-27
+Last updated 2023-01-06
 </body>
 </html>
 
