--- a/Music/PlasticBeach/PlasticBeach.html
+++ b/Music/PlasticBeach/PlasticBeach.html
@@ -7,10 +7,10 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -22,7 +22,7 @@
 	  <!--<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='ATA.html';">The Bad Music Scene: All The Audio Project</button></th></div>-->
 	</div>
 	
-	<h2 style="text-align:center;"><a href="MusicHome.html">Music</a></h2>
+	<h2 style="text-align:center;"><a href="../home.html">Music</a></h2>
 	<h3 style="text-align:center;">Plastic Beach - Kazoo Edition</h3>	
 	
 	<!--<img src="PlasticBeach.png" alt="Plastic Beach - Kazoo Edition Album Cover" style="width:35%;height:auto;"></img>-->
@@ -51,16 +51,16 @@
 <h4 style="text-align:center;">Videos</h4>
 <p style="text-align:center;">Videos weren't initially in the plan, but I realised quickly that I'd need to create some visual element if I wanted to put them on YouTube. For the majority of the videos, this was an image modelled after the single art for that song, if it had any. To add some visual variety, I'd apply various effects to this type of video (see Rhinestone Eyes or On Melancholy Hill), which worked ok. For visual consistency throughout the videos and other art, I bought a bunch of kazoos (which it turns out are very cheap in bulk) and dressed them up as the characters:</p>
 
-<img src="PlasticBeach/characters.png" alt="Plastic Beach Kazoo Characters"></img>
+<img src="characters.png" alt="Plastic Beach Kazoo Characters"></img>
 
 <p style="text-align:center;">These characters were then photographed and used as assets to make the necessary art. I didn't end up using them as much as I would have liked to, as I didn't have time for many proper video recreations. Those that I did manage were some of the lower-effort ones, such as To Binge and Broken, both of which were somewhat unpleasant shooting experiences. For To Binge, I had to squat in a bathtub containing a mixture of water, milk, food colouring and orange juice. This gave me the cloudiness, but not quite the yellow look of the liquid in the music video, so I adjusted the colour in iMovie afterwards. As the white bath had to be revealed once the coloured water had drained, I slowly faded out the colour-changed video to a normal version as the video progressed, giving a half decent imitation of the original.</p>
 
-<img src="PlasticBeach/greenscreen.jpg" alt="The terrible greenscreen setup"></img>
+<img src="greenscreen.jpg" alt="The terrible greenscreen setup"></img>
 
 <p style="text-align:center;">Above is the green screen I set up for the videos. It was used in Superfast Jellyfish, and extensively in Broken, where three green screen shots were layered on top of a changing background (emulating the live visuals for the song, which have been released as a music video for it on the Gorillaz YouTube Channel). Holding a kazoo up from the bottom of the screen while staying out of sight of the laptop camera necessitated holding some uncomfortable positions, but all was for a good cause, so I struggled through. This piece of green paper is still taped to my wall in my family home bedroom.</p>
 
 <div style="text-align: center;"><video width=50% height=auto controls>
-  <source src="PlasticBeach/melancholyArt.mp4" type="video/mp4">
+  <source src="melancholyArt.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video></div>
 
@@ -88,7 +88,7 @@ Your browser does not support the video tag.
 <p style="text-align:center;">Plastic Beach - Kazoo Edition is available on YouTube and SoundCloud. It may end up on streaming services at some point, but I need to find out how uploading weird covers works first.</p>
 
 <hr>
-Last updated 2022-06-06
+Last updated 2023-01-06
 </body>
 </html>
 
