--- a/Music/home.html
+++ b/Music/home.html
@@ -30,16 +30,16 @@
 <br>
 
 <div id="grid">
-	<a href="../placeholder.html" class="img" style="background-image: url(Splinters.jpg)" title="Splinters OST - My first big composing project: an original score for a five star play"></a>
-	<a href="MelancholyChristmas.html" class="img" style="background-image: url(MelancholyChristmas.jpg)" title="Melancholy Christmas - Mutual Frogs: The first song I produced for other musicians."></a>
-	<a href="CommonwealthApp.html" class="img" style="background-image: url(CommonwealthApp.png)" title="Commonwealth App song, submitted as coursework for my degree"></a>
-	<a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq" class="img" style="background-image: url(ObscureCoversVol1.png)" title="Obscure Covers Volume 1: Relatively unknown songs covered in different styles, as an exercise in expanding my stylistic range."></a>
-<a href="MorningChildhood.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood: My first original album."></a>
-    <a href="PlasticBeach.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach - Kazoo Edition: A faithful recreation of most of the amazing Gorillaz album, done using only the sounds of the kazoo."></a>
+	<a href="../placeholder.html" class="img" style="background-image: url(Splinters/Splinters.jpg)" title="Splinters OST - My first big composing project: an original score for a five star play"></a>
+	<a href="MelancholyChristmas/MelancholyChristmas.html" class="img" style="background-image: url(MelancholyChristmas/MelancholyChristmas.jpg)" title="Melancholy Christmas - Mutual Frogs: The first song I produced for other musicians."></a>
+	<a href="CommonwealthApp/CommonwealthApp.html" class="img" style="background-image: url(CommonwealthApp/CommonwealthApp.png)" title="Commonwealth App song, submitted as coursework for my degree"></a>
+	<a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq" class="img" style="background-image: url(ObscureCoversVol1/ObscureCoversVol1.png)" title="Obscure Covers Volume 1: Relatively unknown songs covered in different styles, as an exercise in expanding my stylistic range."></a>
+<a href="MorningChildhood/MorningChildhood.html" class="img" style="background-image: url(MorningChildhood/MorningChildhood.png)" title="Morning Childhood: My first original album."></a>
+    <a href="PlasticBeach/PlasticBeach.html" class="img" style="background-image: url(PlasticBeach/PlasticBeach.png)" title="Plastic Beach - Kazoo Edition: A faithful recreation of most of the amazing Gorillaz album, done using only the sounds of the kazoo."></a>
  </div>
 
 <hr>
-Last updated 2023-01-05
+Last updated 2023-01-06
 </body>
 </html>
 
