--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 <h3>About Me:</h3>
 <p>I'm a 21-year-old musician and hobbyist maker of various things. Currently based in Reading, UK.</p>
-<p>It's nowhere near done yet, but this website aims to collect together various projects I've done over the years, including:</p>
+<p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
 	<li>The original score to a 5-star play</li>
 	<li>Several kazoo-only cover albums</li>
@@ -47,8 +47,6 @@
  </div>
 -->
  
-<a href="CommonwealthApp.html" class="img" style="background-image: url(CommonwealthApp.png)" title="Commonwealth App song, submitted as coursework for my degree"></a>
- 
 <h3 style="text-align:center;">Stuff I've done<!-- (chronologically)--></h3>
 
 	<table>
@@ -59,63 +57,63 @@
 		<th>Title</th>
 	  </tr>
 	  <tr>
-		  <td><img src="Making/SolarTrader.png" alt="Solar Trader logo" style="width:50px;height:50px;"></td>
+		  <td><img src="Making//SolarTrader/SolarTrader.png" alt="Solar Trader logo" style="width:50px;height:50px;"></td>
 	    <td>2022-12-27</td>
-		<td><a href="Making/MakingHome.html">Making</a></td>
-		<td><a href="Making/SolarTrader.html">Solar Trader - bootlegging a board game</a></td>
+		<td><a href="Making/home.html">Making</a></td>
+		<td><a href="Making/SolarTrader/SolarTrader.html">Solar Trader - bootlegging a board game</a></td>
 	  </tr>
 	  <tr>
-		  <td><img src="Music/Splinters.jpg" alt="Splinters soundtrack album art" style="width:50px;height:50px;"></td>
+		  <td><img src="Music/Splinters/Splinters.jpg" alt="Splinters soundtrack album art" style="width:50px;height:50px;"></td>
 	    <td>2022-08-21</td>
-		<td><a href="Music/MusicHome.html">Music</a></td>
+		<td><a href="Music/home.html">Music</a></td>
 		<td><a href="placeholder.html">Splinters Original Score - for the Dolphin Youth Theatre Company</a></td>
 	  </tr>
 	  <tr>
-		  <td><img src="Making/wordleSolver.png" alt="Wordle Solver in action" style="width:50px;height:50px;"></td>
+		  <td><img src="Making/wordleSolver/wordleSolver.png" alt="Wordle Solver in action" style="width:50px;height:50px;"></td>
 	    <td>2022-03-03</td>
-		<td><a href="Making/MakingHome.html">Making</a></td>
-		<td><a href="Making/wordleSolver.html">Wordle Solver using basic set theory, rather than AI</a></td>
+		<td><a href="Making/home.html">Making</a></td>
+		<td><a href="Making/wordleSolver/wordleSolver.html">Wordle Solver using basic set theory, rather than AI</a></td>
 	  </tr>
 	  <tr>
-		  <td><img src="Music/MelancholyChristmas.jpg" alt="Melancholy Christmas Single cover" style="width:50px;height:50px;"></td>
+		  <td><img src="Music/MelancholyChristmas/MelancholyChristmas.jpg" alt="Melancholy Christmas Single cover" style="width:50px;height:50px;"></td>
 	    <td>2021-12-18</td>
-		<td><a href="Music/MusicHome.html">Music</a></td>
-		<td><a href="Music/MelancholyChristmas.html">Melancholy Christmas - Mutual Frogs</a></td>
+		<td><a href="Music/home.html">Music</a></td>
+		<td><a href="Music/MelancholyChristmas/MelancholyChristmas.html">Melancholy Christmas - Mutual Frogs</a></td>
 	  </tr>
 	  <tr>
-		  <td><img src="Music/CommonwealthApp.png" alt="Commonwealth App song thumbnail" style="width:50px;height:50px;"></td>
+		  <td><img src="Music/CommonwealthApp/CommonwealthApp.png" alt="Commonwealth App song thumbnail" style="width:50px;height:50px;"></td>
 	    <td>2021-12-10</td>
-		<td><a href="Music/MusicHome.html">Music</a></td>
-		<td><a href="Music/CommonwealthApp.html">Commonwealth App Song</a></td>
+		<td><a href="Music/home.html">Music</a></td>
+		<td><a href="Music/CommonwealthApp/CommonwealthApp.html">Commonwealth App Song</a></td>
 	  </tr>
 	  <tr>
 		  <td><img src="Music/ObscureCoversVol1.png" alt="Obscure Covers (Vol. 1) EP cover" style="width:50px;height:50px;"></td>
 	    <td>2021-05-30</td>
-		<td><a href="Music/MusicHome.html">Music</a></td>
+		<td><a href="Music/home.html">Music</a></td>
 		<td><a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq">Obscure Covers (Vol. 1)</a></td>
 	  </tr>
 	  <tr>
-		  <td><img src="Music/MorningChildhood.png" alt="Morning Childhood album cover" style="width:50px;height:50px;"></td>
+		  <td><img src="Music/MorningChildhood/MorningChildhood.png" alt="Morning Childhood album cover" style="width:50px;height:50px;"></td>
 	    <td>2020-09-01</td>
-		<td><a href="Music/MusicHome.html">Music</a></td>
-		<td><a href="Music/MorningChildhood.html">Morning Childhood [Original Album]</a></td>
+		<td><a href="Music/home.html">Music</a></td>
+		<td><a href="Music/MorningChildhood/MorningChildhood.html">Morning Childhood [Original Album]</a></td>
 	  </tr>
 	  <tr>
-		  <td><img src="Making/timelapseCam.jpg" alt="timelapseCam" style="width:50px;height:50px;"></td>
+		  <td><img src="Making/timelapseCam/timelapseCam.jpg" alt="timelapseCam" style="width:50px;height:50px;"></td>
 	    <td>2020-07-18</td>
-		<td><a href="Making/MakingHome.html">Making</a></td>
-		<td><a href="Making/timelapseCam.html">Python Timelapse Camera</a></td>
+		<td><a href="Making/home.html">Making</a></td>
+		<td><a href="Making/timelapseCam/timelapseCam.html">Python Timelapse Camera</a></td>
 	  </tr>
 	  <tr>
-		  <td><img src="Music/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album cover" style="width:50px;height:50px;"></td>
+		  <td><img src="Music/PlasticBeach/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album cover" style="width:50px;height:50px;"></td>
 	    <td>2020-03-03</td>
-		<td><a href="Music/MusicHome.html">Music</a></td>
-		<td><a href="Music/PlasticBeach.html">Plastic Beach - Kazoo Edition</a></td>
+		<td><a href="Music/home.html">Music</a></td>
+		<td><a href="Music/PlasticBeach/PlasticBeach.html">Plastic Beach - Kazoo Edition</a></td>
 	  </tr>
 	</table>
 
 <hr>
-Last updated 2022-12-28
+Last updated 2023-01-06
 </body>
 </html>
 
