--- a/Making/home.html
+++ b/Making/home.html
@@ -30,13 +30,13 @@
 <br>
 
 <div id="grid">
-	<a href="SolarTrader.html" class="img" style="background-image: url(SolarTrader.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
-	<a href="wordleSolver.html" class="img" style="background-image: url(wordleSolver.png)" title="Wordle Solver - not a clever one, but it *does* work"></a>
-	<a href="timelapseCam.html" class="img" style="background-image: url(timelapseCam.jpg)" title="Timelapse Cam - using Python and a webcam to take timelapses wherever I can take a Raspberry Pi"></a>
+	<a href="SolarTrader/SolarTrader.html" class="img" style="background-image: url(SolarTrader/SolarTrader.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
+	<a href="wordleSolver/wordleSolver.html" class="img" style="background-image: url(wordleSolver/wordleSolver.png)" title="Wordle Solver - not a clever one, but it *does* work"></a>
+	<a href="timelapseCam/timelapseCam.html" class="img" style="background-image: url(timelapseCam/timelapseCam.jpg)" title="Timelapse Cam - using Python and a webcam to take timelapses wherever I can take a Raspberry Pi"></a>
  </div>
 
 <hr>
-Last updated 2022-12-28
+Last updated 2023-01-06
 </body>
 </html>
 
